--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
     <div class="item item1 col-lg-12 col-md-12 col-sm-12 col-xs-6">
         <img style="width:1360px;height:500px" src="~/imgs/background.jpg">
         <div class="Strm">
-            <h2>Your Stream</h2>
+            <h2>under construction </h2>
 
             
 
